ULParser.java
// $ANTLR 3.0.1 UL.g 2018-01-08 11:19:21

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class ULParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "VARDEC", "FUNCDEC", "EXPR", "FUNCCALL", "FUNCBODY", "TYPE", "INTEGERCONST", "ID", "WHILE", "IF", "ELSE", "STRINGCONST", "FLOATCONST", "CHARCONST", "TRUE", "FALSE", "WS", "COMMENT", "'('", "')'", "','", "'['", "']'", "'{'", "'}'", "';'", "'print'", "'println'", "'='", "'return'", "'*'", "'+'", "'-'", "'<'", "'=='"
    };
    public static final int VARDEC=4;
    public static final int INTEGERCONST=10;
    public static final int FLOATCONST=16;
    public static final int FUNCBODY=8;
    public static final int COMMENT=21;
    public static final int FUNCCALL=7;
    public static final int STRINGCONST=15;
    public static final int EXPR=6;
    public static final int CHARCONST=17;
    public static final int ELSE=14;
    public static final int ID=11;
    public static final int WS=20;
    public static final int EOF=-1;
    public static final int TYPE=9;
    public static final int IF=13;
    public static final int TRUE=18;
    public static final int FUNCDEC=5;
    public static final int WHILE=12;
    public static final int FALSE=19;

        public ULParser(TokenStream input) {
            super(input);
            ruleMemo = new HashMap[56+1];
         }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "UL.g"; }


    protected void mismatch (IntStream input, int ttype, BitSet follow)
            throws RecognitionException
    {
            throw new MismatchedTokenException(ttype, input);
    }
    public void recoverFromMismatchedSet (IntStream input,
                                          RecognitionException e,
                                          BitSet follow)
            throws RecognitionException
    {
            reportError(e);
            throw e;
    }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start program
    // UL.g:40:1: program : ( function )+ ;
    public final program_return program() throws RecognitionException {
        program_return retval = new program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        function_return function1 = null;



        try {
            // UL.g:40:9: ( ( function )+ )
            // UL.g:40:11: ( function )+
            {
            root_0 = (Object)adaptor.nil();

            // UL.g:40:11: ( function )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==TYPE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // UL.g:0:0: function
            	    {
            	    pushFollow(FOLLOW_function_in_program86);
            	    function1=function();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) adaptor.addChild(root_0, function1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (backtracking>0) {failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end program

    public static class function_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start function
    // UL.g:42:1: function : functionDecl functionBody ;
    public final function_return function() throws RecognitionException {
        function_return retval = new function_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        functionDecl_return functionDecl2 = null;

        functionBody_return functionBody3 = null;



        try {
            // UL.g:42:10: ( functionDecl functionBody )
            // UL.g:42:12: functionDecl functionBody
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_functionDecl_in_function96);
            functionDecl2=functionDecl();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, functionDecl2.getTree());
            pushFollow(FOLLOW_functionBody_in_function98);
            functionBody3=functionBody();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, functionBody3.getTree());

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end function

    public static class functionDecl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start functionDecl
    // UL.g:44:1: functionDecl : type identifier '(' formalParameters ')' -> ^( FUNCDEC type identifier formalParameters ) ;
    public final functionDecl_return functionDecl() throws RecognitionException {
        functionDecl_return retval = new functionDecl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal6=null;
        Token char_literal8=null;
        type_return type4 = null;

        identifier_return identifier5 = null;

        formalParameters_return formalParameters7 = null;


        Object char_literal6_tree=null;
        Object char_literal8_tree=null;
        RewriteRuleTokenStream stream_22=new RewriteRuleTokenStream(adaptor,"token 22");
        RewriteRuleTokenStream stream_23=new RewriteRuleTokenStream(adaptor,"token 23");
        RewriteRuleSubtreeStream stream_identifier=new RewriteRuleSubtreeStream(adaptor,"rule identifier");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // UL.g:44:14: ( type identifier '(' formalParameters ')' -> ^( FUNCDEC type identifier formalParameters ) )
            // UL.g:44:16: type identifier '(' formalParameters ')'
            {
            pushFollow(FOLLOW_type_in_functionDecl107);
            type4=type();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_type.add(type4.getTree());
            pushFollow(FOLLOW_identifier_in_functionDecl109);
            identifier5=identifier();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_identifier.add(identifier5.getTree());
            char_literal6=(Token)input.LT(1);
            match(input,22,FOLLOW_22_in_functionDecl111); if (failed) return retval;
            if ( backtracking==0 ) stream_22.add(char_literal6);

            pushFollow(FOLLOW_formalParameters_in_functionDecl113);
            formalParameters7=formalParameters();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_formalParameters.add(formalParameters7.getTree());
            char_literal8=(Token)input.LT(1);
            match(input,23,FOLLOW_23_in_functionDecl115); if (failed) return retval;
            if ( backtracking==0 ) stream_23.add(char_literal8);


            // AST REWRITE
            // elements: type, identifier, formalParameters
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 44:57: -> ^( FUNCDEC type identifier formalParameters )
            {
                // UL.g:44:60: ^( FUNCDEC type identifier formalParameters )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(FUNCDEC, "FUNCDEC"), root_1);

                adaptor.addChild(root_1, stream_type.next());
                adaptor.addChild(root_1, stream_identifier.next());
                adaptor.addChild(root_1, stream_formalParameters.next());

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end functionDecl

    public static class formalParameters_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start formalParameters
    // UL.g:46:1: formalParameters : ( compoundType identifier ( formals )* | );
    public final formalParameters_return formalParameters() throws RecognitionException {
        formalParameters_return retval = new formalParameters_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        compoundType_return compoundType9 = null;

        identifier_return identifier10 = null;

        formals_return formals11 = null;



        try {
            // UL.g:46:18: ( compoundType identifier ( formals )* | )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==TYPE) ) {
                alt3=1;
            }
            else if ( (LA3_0==23) ) {
                alt3=2;
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("46:1: formalParameters : ( compoundType identifier ( formals )* | );", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // UL.g:46:20: compoundType identifier ( formals )*
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_compoundType_in_formalParameters136);
                    compoundType9=compoundType();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, compoundType9.getTree());
                    pushFollow(FOLLOW_identifier_in_formalParameters138);
                    identifier10=identifier();
                    _fsp--;
                    if (failed) return retval;
                    if ( backtracking==0 ) adaptor.addChild(root_0, identifier10.getTree());
                    // UL.g:46:44: ( formals )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( (LA2_0==24) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // UL.g:0:0: formals
                    	    {
                    	    pushFollow(FOLLOW_formals_in_formalParameters140);
                    	    formals11=formals();
                    	    _fsp--;
                    	    if (failed) return retval;
                    	    if ( backtracking==0 ) adaptor.addChild(root_0, formals11.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // UL.g:48:18: 
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end formalParameters

    public static class formals_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start formals
    // UL.g:50:1: formals : ',' compoundType identifier ;
    public final formals_return formals() throws RecognitionException {
        formals_return retval = new formals_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal12=null;
        compoundType_return compoundType13 = null;

        identifier_return identifier14 = null;


        Object char_literal12_tree=null;

        try {
            // UL.g:50:9: ( ',' compoundType identifier )
            // UL.g:50:11: ',' compoundType identifier
            {
            root_0 = (Object)adaptor.nil();

            char_literal12=(Token)input.LT(1);
            match(input,24,FOLLOW_24_in_formals186); if (failed) return retval;
            if ( backtracking==0 ) {
            char_literal12_tree = (Object)adaptor.create(char_literal12);
            adaptor.addChild(root_0, char_literal12_tree);
            }
            pushFollow(FOLLOW_compoundType_in_formals188);
            compoundType13=compoundType();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, compoundType13.getTree());
            pushFollow(FOLLOW_identifier_in_formals190);
            identifier14=identifier();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) adaptor.addChild(root_0, identifier14.getTree());

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end formals

    public static class compoundType_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start compoundType
    // UL.g:52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );
    public final compoundType_return compoundType() throws RecognitionException {
        compoundType_return retval = new compoundType_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token TYPE15=null;
        Token TYPE16=null;
        Token char_literal17=null;
        Token INTEGERCONST18=null;
        Token char_literal19=null;

        Object TYPE15_tree=null;
        Object TYPE16_tree=null;
        Object char_literal17_tree=null;
        Object INTEGERCONST18_tree=null;
        Object char_literal19_tree=null;

        try {
            // UL.g:52:14: ( TYPE | TYPE '[' INTEGERCONST ']' )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==TYPE) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==25) ) {
                    alt4=2;
                }
                else if ( (LA4_1==ID) ) {
                    alt4=1;
                }
                else {
                    if (backtracking>0) {failed=true; return retval;}
                    NoViableAltException nvae =
                        new NoViableAltException("52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );", 4, 1, input);

                    throw nvae;
                }
            }
            else {
                if (backtracking>0) {failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("52:1: compoundType : ( TYPE | TYPE '[' INTEGERCONST ']' );", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // UL.g:52:16: TYPE
                    {
                    root_0 = (Object)adaptor.nil();

                    TYPE15=(Token)input.LT(1);
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType199); if (failed) return retval;
                    if ( backtracking==0 ) {
                    TYPE15_tree = (Object)adaptor.create(TYPE15);
                    adaptor.addChild(root_0, TYPE15_tree);
                    }

                    }
                    break;
                case 2 :
                    // UL.g:53:16: TYPE '[' INTEGERCONST ']'
                    {
                    root_0 = (Object)adaptor.nil();

                    TYPE16=(Token)input.LT(1);
                    match(input,TYPE,FOLLOW_TYPE_in_compoundType216); if (failed) return retval;
                    if ( backtracking==0 ) {
                    TYPE16_tree = (Object)adaptor.create(TYPE16);
                    adaptor.addChild(root_0, TYPE16_tree);
                    }
                    char_literal17=(Token)input.LT(1);
                    match(input,25,FOLLOW_25_in_compoundType218); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal17_tree = (Object)adaptor.create(char_literal17);
                    adaptor.addChild(root_0, char_literal17_tree);
                    }
                    INTEGERCONST18=(Token)input.LT(1);
                    match(input,INTEGERCONST,FOLLOW_INTEGERCONST_in_compoundType220); if (failed) return retval;
                    if ( backtracking==0 ) {
                    INTEGERCONST18_tree = (Object)adaptor.create(INTEGERCONST18);
                    adaptor.addChild(root_0, INTEGERCONST18_tree);
                    }
                    char_literal19=(Token)input.LT(1);
                    match(input,26,FOLLOW_26_in_compoundType222); if (failed) return retval;
                    if ( backtracking==0 ) {
                    char_literal19_tree = (Object)adaptor.create(char_literal19);
                    adaptor.addChild(root_0, char_literal19_tree);
                    }

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end compoundType

    public static class functionBody_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start functionBody
    // UL.g:56:1: functionBody : '{' ( varDec )* ( statement )* '}' -> ^( FUNCBODY ( varDec )* ( statement )* ) ;
    public final functionBody_return functionBody() throws RecognitionException {
        functionBody_return retval = new functionBody_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal20=null;
        Token char_literal23=null;
        varDec_return varDec21 = null;

        statement_return statement22 = null;


        Object char_literal20_tree=null;
        Object char_literal23_tree=null;
        RewriteRuleTokenStream stream_27=new RewriteRuleTokenStream(adaptor,"token 27");
        RewriteRuleTokenStream stream_28=new RewriteRuleTokenStream(adaptor,"token 28");
        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        RewriteRuleSubtreeStream stream_varDec=new RewriteRuleSubtreeStream(adaptor,"rule varDec");
        try {
            // UL.g:56:14: ( '{' ( varDec )* ( statement )* '}' -> ^( FUNCBODY ( varDec )* ( statement )* ) )
            // UL.g:56:16: '{' ( varDec )* ( statement )* '}'
            {
            char_literal20=(Token)input.LT(1);
            match(input,27,FOLLOW_27_in_functionBody244); if (failed) return retval;
            if ( backtracking==0 ) stream_27.add(char_literal20);

            // UL.g:56:20: ( varDec )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==TYPE) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // UL.g:0:0: varDec
            	    {
            	    pushFollow(FOLLOW_varDec_in_functionBody246);
            	    varDec21=varDec();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_varDec.add(varDec21.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            // UL.g:56:28: ( statement )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( ((LA6_0>=INTEGERCONST && LA6_0<=IF)||(LA6_0>=STRINGCONST && LA6_0<=FALSE)||LA6_0==22||(LA6_0>=29 && LA6_0<=31)||(LA6_0>=33 && LA6_0<=38)) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // UL.g:0:0: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_functionBody249);
            	    statement22=statement();
            	    _fsp--;
            	    if (failed) return retval;
            	    if ( backtracking==0 ) stream_statement.add(statement22.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            char_literal23=(Token)input.LT(1);
            match(input,28,FOLLOW_28_in_functionBody252); if (failed) return retval;
            if ( backtracking==0 ) stream_28.add(char_literal23);


            // AST REWRITE
            // elements: statement, varDec
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:43: -> ^( FUNCBODY ( varDec )* ( statement )* )
            {
                // UL.g:56:46: ^( FUNCBODY ( varDec )* ( statement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(FUNCBODY, "FUNCBODY"), root_1);

                // UL.g:56:57: ( varDec )*
                while ( stream_varDec.hasNext() ) {
                    adaptor.addChild(root_1, stream_varDec.next());

                }
                stream_varDec.reset();
                // UL.g:56:65: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.next());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end functionBody

    public static class varDec_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start varDec
    // UL.g:59:1: varDec : compoundType ID ';' -> ^( VARDEC compoundType ID ) ;
    public final varDec_return varDec() throws RecognitionException {
        varDec_return retval = new varDec_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID25=null;
        Token char_literal26=null;
        compoundType_return compoundType24 = null;


        Object ID25_tree=null;
        Object char_literal26_tree=null;
        RewriteRuleTokenStream stream_29=new RewriteRuleTokenStream(adaptor,"token 29");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleSubtreeStream stream_compoundType=new RewriteRuleSubtreeStream(adaptor,"rule compoundType");
        try {
            // UL.g:59:8: ( compoundType ID ';' -> ^( VARDEC compoundType ID ) )
            // UL.g:59:10: compoundType ID ';'
            {
            pushFollow(FOLLOW_compoundType_in_varDec287);
            compoundType24=compoundType();
            _fsp--;
            if (failed) return retval;
            if ( backtracking==0 ) stream_compoundType.add(compoundType24.getTree());
            ID25=(Token)input.LT(1);
            match(input,ID,FOLLOW_ID_in_varDec289); if (failed) return retval;
            if ( backtracking==0 ) stream_ID.add(ID25);

            char_literal26=(Token)input.LT(1);
            match(input,29,FOLLOW_29_in_varDec291); if (failed) return retval;
            if ( backtracking==0 ) stream_29.add(char_literal26);


            // AST REWRITE
            // elements: ID, compoundType
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            if ( backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:30: -> ^( VARDEC compoundType ID )
            {
                // UL.g:59:33: ^( VARDEC compoundType ID )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(adaptor.create(VARDEC, "VARDEC"), root_1);

                adaptor.addChild(root_1, stream_compoundType.next());
                adaptor.addChild(root_1, stream_ID.next());

                adaptor.addChild(root_0, root_1);
                }

            }

            }

            }

            retval.stop = input.LT(-1);

            if ( backtracking==0 ) {
                retval.tree = (Object)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }

                catch (RecognitionException ex) {
                        reportError(ex);
                        throw ex;
                }
        finally {
        }
        return retval;
    }
    // $ANTLR end varDec

    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
